# gamejam

./: CMakeLists.txt
assets/cenarios/: cenario01.txt
src/: main.c
src/assets/: assets.c  assets.h
src/componente/: componente.h  corpo.h
src/entidade/: entidade.h  gerenciador_entidades.c  gerenciador_entidades.h  jogador.c  jogador.h
src/estruturas/: array_dinamico.c  array_dinamico.h
src/sistemas/: sistema_fisico.c  sistema_fisico.h  sistema_grafico.c  sistema_grafico.h
src/testes/: testes.c  testes.h  testes_array_dinamico.c  testes_array_dinamico.h  testes_entidade.c  testes_entidade.h
